--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@openzeppelin/contracts": "^4.1.0"
   },
   "devDependencies": {
-    "truffle-assertions": "^0.9.2"
+    "@truffle/hdwallet-provider": "^1.4.0",
+    "truffle-assertions": "^0.9.2",
+    "truffle-flattener": "^1.5.0"
   }
 }
