--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/alexgeorgousis/alex-nft#readme",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.1.0"
+    "@openzeppelin/contracts": "^4.1.0",
+    "bnc-onboard": "^1.26.1"
   },
   "devDependencies": {
     "@truffle/hdwallet-provider": "^1.4.0",
